笔记格式修正，添加多级目录

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+# ai部分
 data/ai/cv/test.ipynb
 data/ai/cv/model/best.pth
 data/ai/cv/data 
+data/ai/cv/__pycache__
 data/ai/深度学习/download
 data/ai/深度学习/model/best.pth
-data/cv/__pycache__
+
+# 后端部分
 data/python/flask/test/__pycache__/
 data/python/flask/test/blueprints/__pycache__/
-data
